--- a/1/index.html
+++ b/1/index.html
@@ -6,12 +6,37 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Jiajia's Creative Curriculum Vitae</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
+	<style>
+		.button {
+		  border: none;
+		  color: white;
+		  padding: 6px 32px;
+		  text-align: center;
+		  text-decoration: none;
+		  display: inline-block;
+		  font-size: 16px;
+		  margin: 4px 2px;
+		  transition-duration: 0.4s;
+		  cursor: pointer;
+		}
+		
+		.button1 {
+		  background-color: #008CBA; 
+		  color: black; 
+		  border: 2px solid #0841bb;
+		}
+		
+		.button1:hover {
+		  background-color: #0841bb;
+		  color: white;
+		}
+		</style>
 	<body class="is-preload">
 
 		<!-- Wrapper-->
@@ -28,18 +53,30 @@
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
-									<h1>Retinal circuitry modeling</h1>
+									<h2>Retinal circuitry modeling</h2>
 								</header>
 								<p>
-									Early detection of movement plays a key role in threat awareness and appropriate registration of optical flow guides self-locomotion and posture maintenance. The visual pathways that underlie motion detection for threat awareness may go to brainstem areas to permit fast unconscious motor responses which is crucial for early visual process. Stable self-navigation processed in posterior parietal cortex also involves optic flow at retinal level. Motion is a vector defined by direction and speed. Thus, understanding the direction selective mechanisms in visual system is crucial to motion detection. Distinct direction selective pathways have been well studied in mouse and rabbit due to easy accessibility. At retinal level, ON-OFF direction selective ganglion cells (ooDSGC) convey direction selective signals by eliciting robust spiking of action potentials to preferred direction and eliciting minor/no response to null direction. Surprisingly, no evidence shown direction selectivity (DS) in DSGCs from primate retina until recently. Dr. Dacey's lab, which we will collaborate with, proposed that DS presents in recursive bistratified retinal ganglion cell in macaque monkey for the first time. Animals with forward-facing eyes have different optic flow fields from animals with sideways-facing eyes, implying different direction selective mechanisms. Starburst amacrine cell (SAC) is considered as the origin of DS in retina, which connects post-synaptically to bipolar cells, presynaptically to DSGCs and connects pre- or post-synaptically to neighboring SACs. Direction selective calcium signals were recorded from the dendritic branches of SAC in primate retina. However, the mechanisms of its direction selectivity remain unclear. Our central hypothesis is that the intrinsic cell morphology and electrophysiology, the array of bipolar cell inputs and the reciprocal inhibition from neighboring starburst amacrine cells together comprise the direction selectivity of starburst amacrine cell in primate retina. The aim is to build a computational SAC model (in Neuron C simulator) with pre-synaptic connections and biophysics using realistic cell morphology to investigate the dendritic directional tuning of SAC. 
-								</p>
-								<h2>
-									PROJECT NARRATIVE
-								</h2>
+									Early detection of movement plays a key role in threat awareness and appropriate registration of optical flow guides self-locomotion and posture maintenance. Direction selective pathways underlying motion detection have been well studied in mouse and rabbit due to easy accessibility. At retinal level, ON-OFF direction selective ganglion cells (ooDSGC) convey direction selective signals by eliciting robust spiking of action potentials to preferred direction and eliciting minor/no response to null direction. Surprisingly, no evidence shown direction selectivity (DS) in DSGCs from primate retina until recently. Dr. Dacey’s lab, which we will collaborate with, proposed that DS presents in recursive bistratified retinal ganglion cell in macaque monkey for the first time. Animals with forward-facing eyes have different optic flow fields from animals with sideways-facing eyes, implying different direction selective mechanisms. Starburst amacrine cell (SAC) is considered as the origin of DS in retina, which connects post-synaptically to bipolar cells, presynaptically to DSGCs and connects pre- or post-synaptically to neighboring SACs. Direction selective calcium signals were recorded from the dendritic branches of SAC in primate retina. However, the mechanisms of its direction selectivity remain unclear. Our central hypothesis is that the intrinsic cell morphology and electrophysiology, the array of bipolar cell inputs and the reciprocal inhibition from neighboring starburst amacrine cells together comprise the direction selectivity of starburst amacrine cell in primate retina. The aim is to build a computational SAC model (in Neuron C simulator) with pre-synaptic connections and biophysics using realistic cell morphology to investigate the dendritic directional tuning of SAC. 
 								<p>
-									The proposed study relies on a series of experimental and computational supports to investigate how the retinal cells respond to motion in varying directions. A more complete understanding of human motion vision represents a crucial step to develop novel therapies for visuomotor related diseases from clinical aspect. It is also crucial for understanding the mechanisms of our threat awareness and self-navigation at retinal level from scientific aspect. 
-									<br><b>Paper in review</b><br>
+								<section>
+									<div class="row">
+										<div class="col-12">
+											<a href="#" class="image fit"><img src="images/SAC1.png" alt=""></a>
+										</div>
+											<div class="col-12">
+												<a href="#" class="image fit"><img src="images/SAC1.png" alt=""></a>
+											</div>
+												<div class="col-6">
+													<a href="#" class="image fit"><img src="images/SAC3.png" alt=""></a>
+												</div>
+										</section>
+								
+									<br><b>Publication: </b><br>
+										Kim, JK., Peterson, B., Crook, J., Joo, H., Wu, J., Puller, C., Robinson, F., Gamlin, P., Yau, KW., Viana, F., Troy, JB., Smith, R., Packer, O., Detwiler, P., Dacey, D., 2021. Origins of direction selectivity in the primate retina. Nature Communications. (In review) 
+									
 								</p>
+								</article>
+								</div>
 			</div>
 
 		<!-- Scripts -->
