--- a/3/index.html
+++ b/3/index.html
@@ -6,12 +6,37 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Jiajia's Creative Curriculum Vitae</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
+	<style>
+		.button {
+		  border: none;
+		  color: white;
+		  padding: 4px 16px;
+		  text-align: center;
+		  text-decoration: none;
+		  display: inline-block;
+		  font-size: 16px;
+		  margin: 4px 2px;
+		  transition-duration: 0.4s;
+		  cursor: pointer;
+		}
+		
+		.button2 {
+		  background-color: #fafbfc00; 
+		  color: rgb(4, 4, 5); 
+		  border: 2px solid #f7f7f800;
+		}
+		
+		.button2:hover {
+		  background-color: #f9fafc00;
+		  color: rgb(236, 121, 45);
+		}
+		</style>
 	<body class="is-preload">
 
 		<!-- Wrapper-->
@@ -28,10 +53,47 @@
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
-									<h1>Implantable ITO probes for optogenetics</h1>
+									<h2>Implantable ITO probes for optogenetics</h2>
 								</header>
 								<p>
 									Indium-tin-oxide (ITO) thin films are commonly used for optoelectronics due to the combined properties of transparency and electrical conductivity. In previous work, the flexibility of ITO has been increased by PEDOT:PSS coating, which has been widely used in optical devices. Here, we tested the functionality of PEDOT:PSS/ITO electrodes in the use of electrophysiological recordings. The electrodes showed good biocompatibility and stability in saline solution, while the electrical conductivity was still limited. Thus, we designed a multilayer film on Parylene-C substrate with an integration of PEDOT:PSS/ITO/Ag/ITO structure. Silver (Ag) has excellent electrical conductivity, mechanical flexibility and acceptable transparency when it is thin enough. The fabricated PEDOT:PSS/ITO/Ag/ITO thin film showed good adhesion between layers. The multilayer film showed remarkable reduced electrochemical impedance and wavelength-tunable transmittance. </p>
+								
+								<section>
+									<div class="row">
+									<div class="col-6 col-6-medium col-12-small">
+										<a href="#" class="image fit"><img src="images/opto-probe1.png" alt=""></a>
+									</div>
+									<div class="col-6 col-6-medium col-12-small">
+										<a href="#" class="image fit"><img src="images/opto-probe2.png" alt=""></a>
+									</div>
+									<div class="col-6 col-6-medium col-12-small">
+										<a href="#" class="image fit"><img src="images/opto-probe4.png" alt=""></a>
+									</div>
+									<div class="col-6 col-6-medium col-12-small">
+										<a href="#" class="image fit"><img src="images/opto-probe5.png" alt=""></a>
+									</div>
+									<div class="col-8">
+										<a href="#" class="image fit"><img src="images/opto-probe3.png" alt=""></a>
+									</div>
+								</section>
+								<h3>
+									Publications:
+								</h3>
+								<p>
+									Yang, W., Broski, A., <b>Wu, J.</b>, Fan, Q.H., Li, W., 2018. Characteristics of Transparent, PEDOT:PSS-Coated Indium-Tin-Oxide (ITO) Microelectrodes. IEEE Transactions on Nanotechnology 17, 701–704.
+									<a href="../pdf/Characteristics of Transparent PEDOTPSS Coated ITO Microelectrodes.pdf" class="button button2">[Download]</a>
+								</p>
+								<p>
+									Yang, W., Wu, J., Fan, Q., & Li, W. (2019). Transparent and ultra-flexible PEDOT:PSS/ito/ag/ito on parylene thin films with tunable properties. Proc. SPIE 10919, Oxide-based Materials and Devices X.
+									<a href="../pdf/Transparent and ultra-flexible PEDOTPSS ITO Ag ITO on Parylene thin films with tunable properties.pdf" class="button button2">[Download]</a>
+								</p>
+								<p>	
+									Yang, W., Wu, J., Fan, Q.H., Li, W., 2019. Highly Conductive, Transparent, and Antireflective PEDOT:PSS/ITO/Ag/ITO on Parylene-C with Tunable Peak Transmittance. 2019 IEEE 32nd International Conference on Micro Electro Mechanical Systems (MEMS).
+									<a href="../pdf/Manuscript_Weiyang Yang_Final version.pdf" class="button button2">[Download]</a>
+								</p>
+								
+							</article>
+						</div>
 			</div>
 
 		<!-- Scripts -->
