--- a/4/index.html
+++ b/4/index.html
@@ -12,6 +12,31 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
+	<style>
+		.button {
+		  border: none;
+		  color: white;
+		  padding: 4px 16px;
+		  text-align: center;
+		  text-decoration: none;
+		  display: inline-block;
+		  font-size: 16px;
+		  margin: 4px 2px;
+		  transition-duration: 0.4s;
+		  cursor: pointer;
+		}
+		
+		.button2 {
+		  background-color: #fafbfc00; 
+		  color: rgb(4, 4, 5); 
+		  border: 2px solid #f7f7f800;
+		}
+		
+		.button2:hover {
+		  background-color: #f9fafc00;
+		  color: rgb(236, 121, 45);
+		}
+		</style>
 	<body class="is-preload">
 
 		<!-- Wrapper-->
@@ -28,13 +53,31 @@
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
-									<h1>Smart lens for glaucoma monitoring</h1>
+									<h2>Smart lens for glaucoma monitoring</h2>
 								</header>
-								<h2>
-									Retinal circuitry modeling
-								</h2>
 								<p>
 									In this project, we designed a wireless doughnut-shaped contact lens, which can continuously monitor the intraocular pressure for patients with glaucoma. The lens was fabricated with ultra-flexible PDMS, and the coil was coated with Parylene-C. As the intraocular pressure increasing, the strain applied to the coil will increase the radius of curvature. Ideally, the inner area change would lead to an inductance change. The theory was tested with both experimental measurements and COMSOL simulation. The results proved that the reader coil can detect the change of intraocular pressure based on Faraday’s Law of electromagnetic induction. The future design would integrate a reader electronics with the contact lens, communicating with wireless phone app. </p>
+									<section>
+										<div class="row">
+										<div class="col-8">
+											<a href="#" class="image fit"><img src="images/coil1.png" alt=""></a>
+										</div>
+										<div class="col-8">
+											<a href="#" class="image fit"><img src="images/coil2.png" alt=""></a>
+										</div>
+										<div class="col-8">
+											<a href="#" class="image fit"><img src="images/coil3.png" alt=""></a>
+										</div>
+									</section>
+									<h3>
+										Publication:
+									</h3>
+									<p>
+										M. Kouhani, M.H., Wu, J., Tavakoli, A., Weber, A.J., Li, W., 2020. Wireless, passive strain sensor in a doughnut-shaped contact lens for continuous non-invasive self-monitoring of intraocular pressure. Lab on a Chip 20, 332–342.
+										<a href="../pdf/Lab on a chip Manuscripts_Wireless, passive strain sensor in a   doughnut-shaped contact lens.pdf" class="button button2">[Download]</a>
+									</p>
+									</article>
+									</div>
 			</div>
 
 		<!-- Scripts -->
