--- a/5/index.html
+++ b/5/index.html
@@ -28,10 +28,24 @@
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
-									<h1>Electrophysiological recording from diamond probes</h1>
+									<h2>Electrophysiological recordings from diamond probes</h2>
 								</header>
 								<p>
 									In this project, we tested the functionality of boron-doped diamond (BDD) probes in animal experiments. The BDD-Parylene probe was cortically implanted into Sprague Dawley rats under anesthesia. The electrophysiological signals were recorded in a real-time, communicating with external data acquisition (DAQ) board and fast-scan cyclic voltammetry (FSCV). Intan RHD2132 evaluation board post-amplified the acquired signals. The neural spikes were detected and sorted with MATLAB, which provides vital information for necessary adjustments of the sensor design, including effective surface area, electrode diameter, separation etc. </p>
+									<section>
+										<div class="row">
+										<div class="col-12">
+											<a href="#" class="image fit"><img src="images/BDD1.png" alt=""></a>
+										</div>
+										<div class="col-6 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/BDD2.png" alt=""></a>
+										</div>
+										<div class="col-6 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/Surgery.png" alt=""></a>
+										</div>
+									</section>
+									</article>
+									</div>
 			</div>
 
 		<!-- Scripts -->
