--- a/2/index.html
+++ b/2/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Jiajia's Creative Curriculum Vitae</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -28,16 +28,30 @@
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
-									<h1>Neurotransmitter-based retinal prosthesis</h1>
+									<h2>Neurotransmitter-based retinal prosthesis</h2>
 								</header>
 								<p>
-									Retinitis pigmentosa (RP) and age-related macular degeneration (AMD) lead to loss of photoreceptors and blindness. Artificial stimulation of the remaining retinal network is an attractive approach to restore visual function. Most effort has been expended on using electrical stimulation to drive the network but there are limitations to this approach. First, electrical stimulation fails to differentially activate ON and OFF bipolar cells, where the responses cancel out and results in unrealistic image. Thus, patients need further training to reasonably interpret the visual information. Second, the restored spatial field and resolution are limited by size and density of the electrode. For larger spatial field, large electrodes require more power to sufficiently activate retinal neurons, while the increased thermal effect can potentially burn the tissue. For higher spatial resolution, high density of electrodes can potentially cause tissue damage. Third, electrical stimulation activates all types of retinal neurons including both their somata and axons, which lower the spatial resolution and power efficiency. For instance, patients with Argus II implants reported complex shape perception. Thus, we designed a neurotransmitter-based retinal prosthesis to provide a more effective and naturalistic way to convey visual signal to the brain. Exogenous neurotransmitters (glutamate etc.) can replace the loss of endogenous neurotransmitters from retinal degeneration, allowing a differential stimulation to ON and OFF visual pathway. Theoretically, chemical stimulation can produce a more realistic image in response to visual stimuli. We are developing a flexible optofluidic device called an artificial retinal chemical synapse (ARCS) chip. The glutamate is stored in an external reservoir and dispensed through microneedles via electroosmosis. The electroosmotic flow is controlled by visual light patterns using LabView. The neural signals are recorded by multielectrode array (MEA) and are analyzed by spike detection and spike sorting using Plexon Offline Sorter and MATLAB. Previous data has shown that RGCs expressed excitatory response to exogenous glutamate application. </p>
-								<h2>
-									PROJECT NARRATIVE
-								</h2>
-								<p>
-									The proposed study aims to restore vision for people with degenerated retinae. An innovative retinal prosthesis based on chemical stimulation is tested on rat retina. Compared to electrical stimulation, the chemical stimulation will restore a more naturalistic vision for blindness.
+									Retinitis pigmentosa (RP) and age-related macular degeneration (AMD) lead to loss of photoreceptors and blindness. Artificial stimulation of the remaining retinal network is an attractive approach to restore visual function. Most effort has been expended on using electrical stimulation to drive the network but there are limitations to this approach. First, electrical stimulation fails to differentially activate ON and OFF bipolar cells, where the responses cancel out and results in unrealistic image. Second, the restored spatial field and resolution are limited by size and density of the electrode. Third, electrical stimulation activates all types of retinal neurons, which lower the spatial resolution and power efficiency. Thus, we designed a neurotransmitter-based retinal prosthesis to provide a more effective and naturalistic way to convey visual signal to the brain. Exogenous neurotransmitters (glutamate etc.) can replace the loss of endogenous neurotransmitters from retinal degeneration, allowing a differential stimulation to ON and OFF visual pathway. Theoretically, chemical stimulation can produce a more realistic image in response to visual stimuli. We are developing a flexible optofluidic device called an artificial retinal chemical synapse (ARCS) chip. The glutamate is stored in an external reservoir and dispensed through microneedles via electroosmosis. The electroosmotic flow is controlled by visual light patterns using LabView. The neural signals are recorded by multielectrode array (MEA) and are analyzed by spike detection and spike sorting using Plexon Offline Sorter and MATLAB. Previous data has shown that RGCs expressed excitatory response to exogenous glutamate application.  
 								</p>
+								<section>
+									<div class="row">
+									<div class="col-6">
+										<a href="#" class="image fit"><img src="images/Retinal Prosthesis1.png" alt=""></a>
+									</div>
+									<div class="col-10">
+										<a href="#" class="image fit"><img src="images/Retinal Prosthesis3.png" alt=""></a>
+									</div>
+									<div class="col-5">
+										<a href="#" class="image fit"><img src="images/Retinal Prosthesis4.png" alt=""></a>
+									</div>
+									<div class="col-5">
+										<a href="#" class="image fit"><img src="images/Retinal Prosthesis2.png" alt=""></a>
+									</div>
+								</section>
+								<p><object data="images/Media1.mp4" width="360" height="250"> <param name="src" value="images/Media1.mp4" /> </object>
+								</p>
+			</article>
+			</div>
 			</div>
 
 		<!-- Scripts -->
