--- a/6/index.html
+++ b/6/index.html
@@ -6,12 +6,37 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Jiajia's Creative Curriculum Vitae</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
+	<style>
+		.button {
+		  border: none;
+		  color: white;
+		  padding: 4px 16px;
+		  text-align: center;
+		  text-decoration: none;
+		  display: inline-block;
+		  font-size: 16px;
+		  margin: 4px 2px;
+		  transition-duration: 0.4s;
+		  cursor: pointer;
+		}
+		
+		.button2 {
+		  background-color: #fafbfc00; 
+		  color: rgb(4, 4, 5); 
+		  border: 2px solid #f7f7f800;
+		}
+		
+		.button2:hover {
+		  background-color: #f9fafc00;
+		  color: rgb(236, 121, 45);
+		}
+		</style>
 	<body class="is-preload">
 
 		<!-- Wrapper-->
@@ -28,22 +53,63 @@
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
-									<h1>Other works</h1>
+									<h2>Other works</h2>
 								</header>
-								<p>
-									A paper-based carbon-printed biosensor, which measured the impedance changes with the application of different bacteria solutions. Theoretically, respirations from different bacteria would generate different electrical responses (Bandwidth, frequency etc.). </p>
-								<h2>
-									Review 1
-								</h2>
+								
+								<h3>
+									Review in chemical retinal prosthesis
+								</h3>
 								<p>
 									Retinitis pigmentosa and age-related macular degeneration cause blindness to millions of people worldwide. People with these disorders lose photoreceptors, and vision can only be restored by artificial stimulation of the remaining retinal network. Most effort has focused on using electrical stimulation to drive the network but there are limitations to this approach. Electrical stimulation activates neural circuits in a non-selective way, likely leading to unnatural restored vision. Visual acuity is also limited by the size and density of the electrodes, for which there are considerable physical limitations. This review focuses on progress made on the design and in-vitro testing of an alternative neurotransmitter-based retinal prosthesis over the past decade. We discuss the stimulation of retinal networks through glutamate, materials suited for an implant and their biocompatibility, excitotoxicity of dispensed glutamate and known changes to photoreceptor degenerate retinas.
 								</p>
-								<h2>
-									Review 2
-								</h2>
+								<h3>
+									Publication:
+								</h3>
+								<p>
+									Wu, J., Rountree, CM., Kare, SS., Ramkumar, PK., Finan, JD., & Troy, JB., 2022. Progress on designing a chemical retinal prosthesis. Frontiers in Cellular Neuroscience. (In review)
+								</p>
+								<h3>
+									Review in single-channel opto-neurostimulators
+								</h3>
 								<p>
 									Optogenetics is a revolutionary neuromodulation technique in the previous decade. Traditional electrical stimulation activates a group of neurons unselectively, which can cause unexpected results. In contrast, opto-neurostimulators selectively target to neurons expressing light-sensitive opsins. This review focuses on single-channel optogenetic stimulators in the most recent years. We discuss the selection of fabrication materials and optical sources for device design, and communication methods (tethered or wireless) at system level. 
 								</p>
+								<h3>
+									Publication:
+								</h3>
+								<p>
+									Yang, W., Khan, W., Wu, J., & Li, W. (2019). Single-channel Opto-neurostimulators: A Review. Journal of Micromechanics and Microengineering, 29(4), 043001.
+									<a href="../pdf/Single Channel Opto-neurostimulators A Review.pdf" class="button button2">[Download]</a>
+								</p>
+
+								<h3>
+									Cell Tracking Algorithm
+								</h3>
+								<p><object data="images/cell tracking video.mp4" width="360" height="250"> <param name="src" value="images/cell tracking video.mp4" /> </object>
+								</p>
+								<h3>
+									Carbon-printed biosensor
+								</h3>
+								<p>
+									A paper-based carbon-printed biosensor, which measured the impedance changes with the application of different bacteria solutions. Theoretically, respirations from different bacteria would generate different electrical responses (Bandwidth, frequency etc.). </p>
+									<section>
+										<div class="row">
+											<div class="col-7">
+												<a href="#" class="image fit"><img src="images/CarbonInk.png" alt=""></a>
+											</div>
+										</section>
+								<h3>
+									Basic Biology
+								</h3>
+								<section>
+									<div class="row">
+									<div class="col-12">
+										<a href="#" class="image fit"><img src="images/BasicBiology.png" alt=""></a>
+									</div>
+								</section>
+								
+					</article>
+				</div>
 			</div>
 
 		<!-- Scripts -->
